@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/minitest
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.59 2011/11/20 12:49:52 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/minitest/ChangeLog,v 1.60 2011/12/15 07:11:36 graaff Exp $
+
+  15 Dec 2011; Hans de Graaff <graaff@gentoo.org> -minitest-2.6.0.ebuild,
+  -minitest-2.6.1.ebuild:
+  Remove old versions.
 
 *minitest-2.8.1 (20 Nov 2011)
 
